# wano

./: .gitignore  Cargo.toml  README.md  justfile
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/common/: file.rs  mod.rs  path.rs
crates/app/src/wasm/: mod.rs
crates/app/src/wasm/provider/: deno.rs  mod.rs  wasmer.rs
examples/wasm-wasi/: Cargo.toml  main.ts
examples/wasm-wasi/src/: lib.rs  main.rs
examples/wasm-web/: justfile  main.ts
examples/wasm-web/src/: lib.rs
src/: data.rs  main.rs  manager.rs  registry.rs  result.rs  runtime.rs
src/cmd/: mod.rs
wasm-examples/wasm-wasi/: justfile  main.ts
wasm-examples/wasm-web/: Cargo.toml  main.ts
wasm-examples/wasm-web/src/: lib.rs
