[package]
name = "wasmlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
anyhow = "1.0"
env_logger = "0"
tokio = { version = "1", features = ["full"] }
oci-distribution = "0"
wasm-pack = "0"
wasmtime = "0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0"
