[package]
name = "wano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.6"
anyhow = "1.0.56"
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.23"
wasmer = "2.2.1"
oci-distribution = "0.8.1"
url = "2.2.2"
dirs = "4.0.0"