[package]
name = "wasm-web"
version = "0.1.0"
authors = ["David Ko <dko@suse.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.79"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.56"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
